@@ -1,3 +1,9 @@
+2012-11-12  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix make distcheck.
+
+        * GNUmakefile.list.am: Add missing header.
+
 2012-11-11  Michael Pruett  <michael@68k.org>
 
         Fix assertion failure in JSObject::tryGetIndexQuickly()
